--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.19/dist/css/uikit.min.css" />
+    <script src="https://kit.fontawesome.com/33e495fb35.js" crossorigin="anonymous"></script>
     <!--Boostrap-->
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -387,8 +389,49 @@
     </div>
 
 
+<!--Carrito ?-->
+<div class="uk-overflow-auto container" style = 'width: 70%'>
+    <table class="uk-table uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-shrink"></th>
+                <th class="uk-table-small sty"><h3>Producto</h3></th>
+                <th class="uk-table-small"></th>
+                <th class="uk-width-small sty"><h3>Precio</h3></th>
+                <th class="uk-table-shrink uk-text-small sty"><h3>Unitario</h3></th>
+                <th class="uk-table-shrink uk-text-small sty"><h3>Total</h3></th>
 
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><input class="uk-checkbox" type="checkbox"></td>
+                <td><img class="uk-preserve-width uk-border-circle" src="images/product1.png" width="40" alt=""></td>
+                <td class="uk-table-link">
+                    <h3 class = "item-name">Jugo de Piña</h3>
+                </td>
+                <td class="uk-text-truncate item-price"><h3>$100</h3></td>
+                <td><input type = 'number' class = 'num' value = '1'></td>
+                <td class="uk-text-truncate total-price"><h3>$100</h3></td>
+                <td><button class="uk-button 
+                    " type="button">Remove</button></td>
+            </tr>
+      
 
+        </tbody>
+        <tr>
+          <td><input class="uk-checkbox" type="checkbox"></td>
+          <td><img class="uk-preserve-width uk-border-circle"  width="40" alt=""></td>
+          <td class="uk-table-link">
+              <h3 class = "item-name"><strong>Grand-Total</strong></h3>
+          </td>
+          <td class="uk-text-truncate"><h3></h3></td>
+          <td class="uk-text-truncate"><h3></h3></td>
+          <td class="uk-text-truncate grand-total"><h3><strong>$0</strong></h3></td>
+          
+      </tr>
+    </table>
+</div>
         <!-- Footer -->
         <section class="contact container" id="contact">
             <div class="contact__left">
