integrando local storage

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
     </header>
 
-    <!-- Los Jugos mas Pedidos (Aqui hay botones) -->
+    <!-- LOS JUGOS MAS PEDIDOS (Aqui hay botones) -->
 
     <main container>
         <section class="section new" id="new">
@@ -176,7 +176,7 @@
             </div>
         </section>
 
-            <!--SECCION DE TODOS LOS JUGOS-->
+            <!--SECCION DE TODOS LOS JUGOS (CON BOTONES)-->
 
         <section class="section all__products" id="all">
             <div class="all__center container">
@@ -410,8 +410,7 @@
                 <td class="uk-text-truncate item-price"><h3>$100</h3></td>
                 <td><input type = 'number' class = 'num' value = '1'></td>
                 <td class="uk-text-truncate total-price"><h3>$100</h3></td>
-                <td><button class="uk-button 
-                    " type="button">Eliminar</button></td>
+                <td><button class="uk-button uk-button-danger" type="button">Eliminar</button></td>
             </tr>
       
 
